--- a/Animation/public_html/point.html
+++ b/Animation/public_html/point.html
@@ -6,13 +6,13 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Replacement Animation</title>
+        <title>Point to Point Animation</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script type="text/javascript" src="replacement.js"></script>
+        <link rel="stylesheet" type="text/css" href="point.css" />
     </head>
     <body>
-        <img id="ball" src="images/ball0.gif" alt="baseball" />
-
+        <img id="ball" src="images/orb.gif" alt="ball" />
+        <script type="text/javascript" src="images/orb/gif"></script>
     </body>
 </html>
